--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -667,6 +667,7 @@ table.fc-border-separate {
       background-color: #0d7339;
       padding: 3px 4px;
       border-radius: 5px;
+      width: auto;
 
       &:hover {
         background-color: #8bbf50;
